<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">P9-ConstraintLayout</string>
    <string name="dummy_calculator">Dummy Calculator</string>
    <string name="first_number">First Number</string>
    <string name="second_number">Second Number</string>
    <string name="add">Add</string>
    <string name="clear">Clear</string>
    <string name="result">Result = %d</string>
    <string name="symbol">Add Symbol</string>
    <string name="default_result">Result = 0</string>
</resources>