<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            app:layout_constraintGuide_percent="0.20"/>

    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline2"
            app:layout_constraintGuide_percent="0.33"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/first_number"/>

    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline3"
            app:layout_constraintGuide_percent="0.66"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result"/>

    <TextView
            android:text="@string/dummy_calculator"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent"/>

    <Button
            android:text="@string/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/clear"/>

    <Button
            android:text="@string/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/clear"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3"
            app:layout_constraintStart_toEndOf="@+id/add"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/first_number"
            app:layout_constraintHorizontal_weight="0.6"
            app:layout_constraintTop_toBottomOf="@+id/guideline2"
            app:layout_constraintBottom_toTopOf="@+id/second_number"
            app:layout_constraintEnd_toStartOf="@+id/text_view2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            android:minHeight="48dp"
            android:autofillHints=""/>

    <TextView
            android:text="@string/first_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_view2"
            android:labelFor="@id/first_number"
            app:layout_constraintHorizontal_weight="0.4"
            app:layout_constraintBaseline_toBaselineOf="@+id/first_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/first_number"
            app:layout_constraintHorizontal_bias="0.5"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/second_number"
            app:layout_constraintHorizontal_weight="0.6"
            app:layout_constraintEnd_toEndOf="@+id/first_number"
            app:layout_constraintTop_toBottomOf="@+id/first_number"
            app:layout_constraintBottom_toTopOf="@+id/result"
            app:layout_constraintEnd_toStartOf="@+id/text_view3"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            android:minHeight="48dp"
            android:autofillHints=""
            tools:ignore="LabelFor"/>

    <TextView
            android:text="@string/second_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_view3"
            android:labelFor="@id/second_number"
            app:layout_constraintHorizontal_weight="0.4"
            app:layout_constraintBaseline_toBaselineOf="@+id/second_number"
            app:layout_constraintStart_toEndOf="@+id/second_number"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:text="@string/default_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/result"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/second_number"
            app:layout_constraintTop_toBottomOf="@+id/second_number"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_add_24"
            android:id="@+id/image_view"
            app:layout_constraintTop_toBottomOf="@+id/first_number"
            app:layout_constraintBottom_toTopOf="@+id/second_number"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            android:contentDescription="@string/symbol"/>

</androidx.constraintlayout.widget.ConstraintLayout>